--- a/style.css
+++ b/style.css
@@ -67,8 +67,8 @@ body {
 }
 
 .table-head tr th {
-  background-color: #e5e5e5;
-  padding: 0 2rem;
+  background-color: #bfdbfe;
+  padding: 0 3.5rem;
 }
 .table-head tr th:first-child {
   border-radius: 8px 0 0 8px;
@@ -89,14 +89,25 @@ body {
   padding: 1rem;
 }
 
+.table-body i {
+  font-size: 1.2rem;
+  cursor: pointer;
+}
 .table-body .fa-pen-to-square {
   color: var(--edit);
-  cursor: pointer;
 }
 
 .table-body .fa-trash {
   color: var(--delete);
-  cursor: pointer;
+}
+
+.deactive {
+  opacity: 0.4;
+  pointer-events: none;
+}
+
+.table-body .fa-floppy-disk {
+  color: var(--save);
 }
 
 /* footer style */
@@ -113,4 +124,58 @@ body {
 
 a {
   text-decoration: none;
+}
+
+/* input style */
+
+input {
+  padding: 0 10px;
+  border: 2px solid #3b82f6;
+  outline: none;
+  border-radius: 2px;
+  font-size: 0.8rem;
+  width: 10rem;
+}
+input:focus {
+  border-color: #06b6d4;
+}
+
+/* responsive design */
+@media (max-width: 1100px) {
+  html {
+    font-size: 15px;
+  }
+  .table-head tr th {
+    padding: 0 3rem;
+  }
+  input {
+    width: 8rem;
+  }
+}
+@media (max-width: 900px) {
+  html {
+    font-size: 12px;
+  }
+  .table-head tr th {
+    padding: 0 2rem;
+  }
+  input {
+    width: 6rem;
+  }
+}
+@media (max-width: 600px) {
+  html {
+    font-size: 10px;
+  }
+  .table-head tr th {
+    padding: 0 1rem;
+  }
+  input {
+    width: 6rem;
+  }
+}
+@media (max-width: 500px) {
+  html {
+    font-size: 8px;
+  }
 }
