--- a/style.css
+++ b/style.css
@@ -178,4 +178,13 @@ input:focus {
   html {
     font-size: 8px;
   }
+  .table-head {
+    font-size: 1rem;
+  }
+  .main-container .head-title {
+    font-size: 1.6rem;
+  }
+  .table-body {
+    font-size: 0.9rem;
+  }
 }
